--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
     </div>
     <div class="name" >
-        <img src="nijar.jpeg" alt="A" >
+        <img src="IMG_20231027_105542.jpg" alt="A" >
         <center><h1  class="name-h">NIJARKHAN</h1><br>
         <h3  class="name-j">Student</h3></center>
     </div>
